--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,6 +14,7 @@
     "@opencut/db": "workspace:*",
     "@t3-oss/env-nextjs": "^0.13.8",
     "better-auth": "^1.1.1",
+    "@upstash/redis": "^1.35.1"
     "zod": "^4.0.5"
   },
   "devDependencies": {
