--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,8 @@
     "@opencut/auth": "workspace:*",
     "@opencut/db": "workspace:*",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-popover": "^1.1.7",
+"@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-core": "^0.13.8",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@upstash/ratelimit": "^2.0.5",
@@ -49,6 +51,7 @@
     "next-themes": "^0.4.4",
     "pg": "^8.16.2",
     "radix-ui": "^1.4.2",
+    "@radix-ui/react-dialog": "^1.1.7",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
